<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="117dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtOperation"
            android:layout_width="62dp"
            android:layout_height="42dp"
            android:layout_marginStart="13dp"
            android:text="@string/btnOperation"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtResult"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="12dp"
            android:background="#000000"
            android:foregroundTint="#FFFFFF"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtOperation"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="409dp"
        android:layout_height="574dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout">

        <Button
            android:id="@+id/btnEight3"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="113dp"
            android:layout_marginTop="414dp"
            android:layout_marginEnd="215dp"
            android:layout_marginBottom="233dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnEight"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFour3"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="330dp"
            android:layout_marginEnd="307dp"
            android:layout_marginBottom="317dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnFour"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnC"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="209dp"
            android:layout_marginTop="499dp"
            android:layout_marginEnd="119dp"
            android:layout_marginBottom="148dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnC"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="c" />

        <Button
            android:id="@+id/btnThree3"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="209dp"
            android:layout_marginTop="246dp"
            android:layout_marginEnd="119dp"
            android:layout_marginBottom="401dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnThree"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDivision3"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="305dp"
            android:layout_marginTop="331dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="316dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnDivision"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSeven3"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="414dp"
            android:layout_marginEnd="307dp"
            android:layout_marginBottom="233dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnSeven"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnEquials3"
            android:layout_width="171dp"
            android:layout_height="65dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnEqual"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btnSubtraction"
            app:layout_constraintTop_toBottomOf="@+id/btnC" />

        <Button
            android:id="@+id/btnSubtraction"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="305dp"
            android:layout_marginTop="499dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="148dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnSubstraction"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSix3"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="209dp"
            android:layout_marginTop="331dp"
            android:layout_marginEnd="119dp"
            android:layout_marginBottom="316dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnSix"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnNine3"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="209dp"
            android:layout_marginTop="415dp"
            android:layout_marginEnd="119dp"
            android:layout_marginBottom="232dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnNine"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFive3"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="113dp"
            android:layout_marginTop="330dp"
            android:layout_marginEnd="215dp"
            android:layout_marginBottom="317dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btn5"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnPoint3"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="114dp"
            android:layout_marginTop="499dp"
            android:layout_marginEnd="214dp"
            android:layout_marginBottom="148dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnPoint"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnMultiplication3"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="305dp"
            android:layout_marginTop="246dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="401dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnMultiplication"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnOne3"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="246dp"
            android:layout_marginEnd="307dp"
            android:layout_marginBottom="401dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnOne"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnZero3"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="499dp"
            android:layout_marginEnd="305dp"
            android:layout_marginBottom="148dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnZero"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnTwo3"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="113dp"
            android:layout_marginTop="246dp"
            android:layout_marginEnd="215dp"
            android:layout_marginBottom="401dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnTwo"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSum3"
            android:layout_width="83dp"
            android:layout_height="84dp"
            android:layout_marginStart="305dp"
            android:layout_marginTop="415dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="232dp"
            android:onClick="onClick"
            android:shadowColor="#185953"
            android:shadowRadius="90"
            android:text="@string/btnSum"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>